--- a/DFT.ipynb
+++ b/DFT.ipynb
@@ -111,21 +111,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "[{'freq': -10, 'amp': 0.6356921514135282, 'phase': -1.5604500906779253},\n",
+       " {'freq': -9, 'amp': 1.9920696671902556, 'phase': -1.601691503984645},\n",
+       " {'freq': -8, 'amp': 2.4978976730993456, 'phase': 1.5602170737625998},\n",
+       " {'freq': -7, 'amp': 2.682465850454835, 'phase': 1.539331797594624},\n",
+       " {'freq': -6, 'amp': 7.415979419684545, 'phase': -1.5846069074556204},\n",
+       " {'freq': -5, 'amp': 2.294885583401783, 'phase': -1.5876199050436548},\n",
+       " {'freq': -4, 'amp': 4.534080100616955, 'phase': 1.5533350137167783},\n",
+       " {'freq': -3, 'amp': 2.430774039620295, 'phase': 1.5616456819641626},\n",
+       " {'freq': -2, 'amp': 0.24994994484429206, 'phase': -1.2586036457110423},\n",
+       " {'freq': -1, 'amp': 194.91912135881503, 'phase': -1.5732968236585552},\n",
+       " {'freq': 0, 'amp': 0.9381750084680618, 'phase': -1.0567679842653872},\n",
+       " {'freq': 1, 'amp': 31.761180219103753, 'phase': 1.5724638336848995},\n",
+       " {'freq': 2, 'amp': 11.545797882131618, 'phase': 1.5795436550232735},\n",
+       " {'freq': 3, 'amp': 10.27381854949999, 'phase': -1.5687331311999344},\n",
+       " {'freq': 4, 'amp': 10.833271735734352, 'phase': -1.5608801721245964},\n",
+       " {'freq': 5, 'amp': 3.448473345912667, 'phase': 1.580763496759131},\n",
+       " {'freq': 6, 'amp': 3.0817531697098066, 'phase': 1.601102659365984},\n",
+       " {'freq': 7, 'amp': 3.2521941463750927, 'phase': -1.549577357796329},\n",
+       " {'freq': 8, 'amp': 1.1495920654495466, 'phase': -1.5349402070194065},\n",
+       " {'freq': 9, 'amp': 0.951373249430287, 'phase': 1.616232928839113},\n",
+       " {'freq': 10, 'amp': 0.35124892390924556, 'phase': -1.538537448755286}]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "to_draw"
+   ]
   },
   {
    "cell_type": "code",
